<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/product_details"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/product_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/product_price"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/product_quantity"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/supplierNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/supplier_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/supplier_phone_number"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/product_name"
                android:inputType="text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/priceEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/product_price"
                android:inputType="text"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/QuantityView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/quantityEditText"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_quantity"
                    android:inputType="text"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/plusButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_background"
                    android:text="@string/plus_one"
                    android:textColor="@android:color/white"
                    android:textSize="19sp" />

                <Button
                    android:id="@+id/minusButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/button_background"
                    android:text="@string/minus_one"
                    android:textColor="@android:color/white"
                    android:textSize="19sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/supplierNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/supplier_name"
                android:inputType="text"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/supplier_phone_number"
                    android:inputType="phone"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/callImageButton"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_background"
                    android:contentDescription="@string/supplier_phone_number"
                    android:src="@drawable/ic_phone_white_24dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="203dp"
        android:background="@color/colorPrimaryDark"
        android:drawableStart="@drawable/ic_delete_24dp"
        android:padding="8dp"
        android:text="@string/delete"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="normal" />

</RelativeLayout>